--- a/.drone.yml
+++ b/.drone.yml
@@ -4,9 +4,10 @@ name: test-a5
 type: docker
 steps:
   - name: iverilog
-    image: nchandra75/iverilog
+    image: nchandra75/synth
     commands:
       - yosys synth.ys
+      - rm -f cpu_tb.log
       - iverilog -DTESTDIR=\"test\t1\" -o cpu_tb -c program_file_synth.txt
       - ./cpu_tb
       - iverilog -DTESTDIR=\"test\t2\" -o cpu_tb -c program_file_synth.txt
